--- a/public/locales/ja/about.json
+++ b/public/locales/ja/about.json
@@ -22,6 +22,6 @@
   "privacyStatement": {
     "title": "プライバシーに関する声明",
     "paragraph1": "私たちは皆様のプライバシーを非常に重要視し、ユーザーのプライバシーを保護することに力を入れています。OpenAIサーバーから入力または受信したテキストは一切収集・保存していません。この声明の確認のために、ソースコードを公開しています。",
-    "paragraph2": "皆様のAPIキーのセキュリティを最優先にし、最大限の注意を払って取り扱っています。独自のAPIキーを使用する場合、キーはブラウザ上でのみ保存され、第三者とは一切共有されません。キーはOpenAI APIにアクセスする目的でのみ使用され、他の無許可の使用には利用されません。"
+    "paragraph2": "皆様のAPIキーのセキュリティを最優先にし、最大限の注意を払って取り扱っています。独自のAPIキーを使用する場合、キーはブラウザ上でのみ保存され、第三者とは一切共有されません。キーはWeMake APIにアクセスする目的でのみ使用され、他の無許可の使用には利用されません。"
   }
 }
