--- a/public/locales/zh-CN/about.json
+++ b/public/locales/zh-CN/about.json
@@ -22,6 +22,6 @@
   "privacyStatement": {
     "title": "隐私声明",
     "paragraph1": "我们非常重视您的隐私，并致力于保护用户的隐私。我们不会以任何形式收集或存储您输入或从 OpenAI 服务器接收的任何文本。我们的源代码可以供您检查，以验证此声明。",
-    "paragraph2": "我们高度优先考虑您的 API 密钥的安全，并非常小心地处理它。如果您使用自己的 API 密钥，您的密钥将专门存储在您的浏览器中，并且永远不会与任何第三方实体共享。它仅用于访问 OpenAI API 的预期用途，而不会用于任何其他未经授权的用途。"
+    "paragraph2": "我们高度优先考虑您的 API 密钥的安全，并非常小心地处理它。如果您使用自己的 API 密钥，您的密钥将专门存储在您的浏览器中，并且永远不会与任何第三方实体共享。它仅用于访问 WeMake API 的预期用途，而不会用于任何其他未经授权的用途。"
   }
 }
