--- a/public/locales/zh-HK/api.json
+++ b/public/locales/zh-HK/api.json
@@ -1,9 +1,9 @@
 {
-  "securityMessage": "我哋將你嘅 API key 嘅安全擺喺首位，非常小心噉處理佢。你嘅 key 專門儲存喺你嘅瀏覽器入面，並且唔會共享畀任何第三方實體。佢僅用於存取 OpenAI API 呢項指定用途，唔會用於任何其他未經授權嘅用途。",
+  "securityMessage": "我哋將你嘅 API key 嘅安全擺喺首位，非常小心噉處理佢。你嘅 key 專門儲存喺你嘅瀏覽器入面，並且唔會共享畀任何第三方實體。佢僅用於存取 WeMake API 呢項指定用途，唔會用於任何其他未經授權嘅用途。",
   "apiEndpoint": {
     "inputLabel": "API 端點",
-    "description": "如果你選擇非官方嘅 API 端點，佢充當代理。代理係你嘅設備同目標伺服器（呢度即係 OpenAI API）之間嘅中介，噉你就可以喺用唔到 OpenAI API 嘅地區使用。",
-    "warn": "另外，如果你提供咗一個允許免費存取 OpenAI API 嘅自訂嘅 API 端點，噉你唔使填寫 API key 就可以用到 ChatGPT。不過，用第三方 API 端點嗰陣必須謹慎，因為唔可信嘅 API 端點可能會記低你喺傾偈入面嘅個人資料。用第三方 API 端點之前要驗證佢是否可信，噉樣可以保護你嘅私隱同安全。"
+    "description": "如果你選擇非官方嘅 API 端點，佢充當代理。代理係你嘅設備同目標伺服器（呢度即係 WeMake API）之間嘅中介，噉你就可以喺用唔到 WeMake API 嘅地區使用。",
+    "warn": "另外，如果你提供咗一個允許免費存取 WeMake API 嘅自訂嘅 API 端點，噉你唔使填寫 API key 就可以用到 ChatGPT。不過，用第三方 API 端點嗰陣必須謹慎，因為唔可信嘅 API 端點可能會記低你喺傾偈入面嘅個人資料。用第三方 API 端點之前要驗證佢是否可信，噉樣可以保護你嘅私隱同安全。"
   },
   "apiKey": {
     "howTo": "喺<0>呢度</0>取得你嘅個人 API key。",
