--- a/public/locales/zh-TW/about.json
+++ b/public/locales/zh-TW/about.json
@@ -22,6 +22,6 @@
   "privacyStatement": {
     "title": "隱私宣告",
     "paragraph1": "我們非常重視您的隱私，並致力於保護使用者的隱私。我們不會以任何形式收集或儲存您輸入或從 OpenAI 伺服器接收的任何文字。我們的原始碼可以供您檢查，以驗證此宣告。",
-    "paragraph2": "我們非常重視您的 API 金鑰安全，並非常小心地處理它。如果您使用自己的 API 金鑰，您的金鑰將專門儲存在您的瀏覽器中，並且永遠不會與任何第三方實體共享。它僅用於存取 OpenAI API 的預期用途，而不會用於任何其他未經授權的用途。"
+    "paragraph2": "我們非常重視您的 API 金鑰安全，並非常小心地處理它。如果您使用自己的 API 金鑰，您的金鑰將專門儲存在您的瀏覽器中，並且永遠不會與任何第三方實體共享。它僅用於存取 WeMake API 的預期用途，而不會用於任何其他未經授權的用途。"
   }
 }
