--- a/public/locales/zh-TW/api.json
+++ b/public/locales/zh-TW/api.json
@@ -1,9 +1,9 @@
 {
-  "securityMessage": "我們高度重視您的 API 金鑰安全，並非常小心地處理它。您的金鑰專門儲存在您的瀏覽器中，並且不會與任何第三方實體共享。它僅用於存取 OpenAI API 的指定用途，不會用於任何其他未經授權的用途。",
+  "securityMessage": "我們高度重視您的 API 金鑰安全，並非常小心地處理它。您的金鑰專門儲存在您的瀏覽器中，並且不會與任何第三方實體共享。它僅用於存取 WeMake API 的指定用途，不會用於任何其他未經授權的用途。",
   "apiEndpoint": {
     "inputLabel": "API 端點",
-    "description": "當您選擇非官方 API 端點時，它將作為代理。代理的作用是在您的裝置與目的伺服器（本例中為 OpenAI API）之間作為中介。透過這個方式，它讓您能夠在其他可能受限的地區存取 OpenAI API。",
-    "warn": "此外，如果您提供了一個允許免費存取 OpenAI API 的自訂 API 端點，您只需將 API 金鑰欄位留空即可使用 ChatGPT，無需提供 API 金鑰。不過，在使用第三方 API 端點時必須謹慎，因為不可靠的端點可能會在對話中記錄您的個人資訊。在使用 API 端點前，請始終確認其可靠性，以保護您的隱私和安全。"
+    "description": "當您選擇非官方 API 端點時，它將作為代理。代理的作用是在您的裝置與目的伺服器（本例中為 WeMake API）之間作為中介。透過這個方式，它讓您能夠在其他可能受限的地區存取 WeMake API。",
+    "warn": "此外，如果您提供了一個允許免費存取 WeMake API 的自訂 API 端點，您只需將 API 金鑰欄位留空即可使用 ChatGPT，無需提供 API 金鑰。不過，在使用第三方 API 端點時必須謹慎，因為不可靠的端點可能會在對話中記錄您的個人資訊。在使用 API 端點前，請始終確認其可靠性，以保護您的隱私和安全。"
   },
   "apiKey": {
     "howTo": "在<0>此處</0>取得您的個人 API 金鑰。",
